<resources>
    <string name="app_name">KeepAccount</string>
    <string name="title_activity_basic">BasicActivity</string>

    <!--首页-->
    <string name="title_edit_account">记账</string>
    <string name="title_chart">报表</string>
    <string name="title_me">设置</string>

    <string name="ok_text">确定</string>
    <string name="date_picker_title">选择日期</string>
    <string name="budget_picker_title">设置预算</string>

    <!--记账-->
    <string name="ea_date">2019/3/23</string>
    <string name="ea_total">总资产</string>
    <string name="ea_income">今日收入</string>
    <string name="ea_pay">今日支出</string>
    <string name="budget_info">月预算：%1$.2f 月剩余：%2$.2f </string>
    <string name="add_budget">添加预算</string>
    <string name="ea_monthly_income">本月收入</string>
    <string name="ea_monthly_pay">本月支出</string>
    <string name="ea_add_tip">暂无内容</string>

    <string name="default_value">***</string>
    <string name="zero">0.00</string>
    <string name="unit">元</string>

    <string name="income_txt">收入</string>
    <string name="cost_txt">支出</string>
    <string name="toast_save_success">保存成功</string>
    <string name="toast_save_failure">信息不全，请继续完善</string>
    <!--账本-->
    <string name="all_book">所有账本</string>
    <string name="book_name">账本名称</string>
    <string name="book_condition">记账场景</string>
    <string name="book_name_text">请输入账本名称</string>
    <string name="book_condition_text">请选择账本场景</string>
    <string name="book_cover">账本封面</string>
    <string name="add_book">添加账本</string>
    <string name="account_amount_info_string">总计：%1$.2f 支出: %2$.2f 收入: %3$.2f</string>
    <string name="account_income_info_string">收入: %1$.2f</string>
    <string name="account_cost_info_string">支出: %1$.2f</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_content_delete">确定要删除此条记录吗？</string>
    <string name="dialog_book_delete">确定要删除此记账本吗？</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_sure">确定</string>
    <string name="reminder_time">提醒时间: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
